manually adding rules to reset more elements

--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -377,3 +377,11 @@ template {
 [hidden] {
     display: none;
 }
+
+/* Added Manually by Nicola Brucoli
+    ========================================================================== */
+
+h2, p {
+    margin: 0;
+}
+
