--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,39 +166,42 @@ ul {
     width: 100%;
     height: 100%;
     background-size: cover;
-    background-color: #FFFFFF;
     background-position: top;
+    background-color: #FFFFFF;
     position: relative;
     padding: 0px;
     border-radius: 16px;
 }
 
 #project1 {
-    background-image: url("../images/login-screen.png");
+    background-image: url("../images/webp/login-screen.webp");
 }
 
 #project2 {
-    background-image: url("https://placehold.co/600");
+    background-image: url("../images/webp/volleyball-scorecounter.webp");
 }
 
 #project3 {
-    background-image: url("https://placehold.co/600");
+    background-image: url("../images/webp/digital-business-card-v.webp");
 }
 
 #project4 {
-    background-image: url("https://placehold.co/600");
+    background-image: url("../images/webp/react-travel-journal-v.webp");
 }
 
 #project5 {
-    background-image: url("https://placehold.co/600");
+    background-image: url("../images/webp/HoriSEOn.webp");
+    background-position: left;
 }
 
 #project6 {
-    background-image: url("https://placehold.co/600");
+    background-image: url("../images/webp/personal-creative-portfolio.webp");
+    background-position: left;
 }
 
 #project7 {
-    background-image: url("https://placehold.co/600");
+    background-image: url("../images/webp/fantasy-landing-page.webp");
+    background-position: right;
 }
 
 /* pseudo classes */
