Title tooltip improved displaying a content with :hover::after only if an <a> tag contains an empty title property, replacing the default tooltip which doesn't look great

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,14 @@ p {
     background-size: 50px 50px, 50px 50px, 25px 25px, 25px 25px;
 }
 
+header {
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(10px);
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -161,6 +169,7 @@ a {
     background-color: var(--dark-color);
     padding: 4px 12px;
     border-radius: 8px;
+    position: relative;
 }
 
 h2 a {
@@ -296,16 +305,10 @@ h2 a:hover {
     content: "share";
 }
 
-header {
-    position: sticky;
-    top: 0;
-    z-index: 9999;
-    background-color: rgba(0, 0, 0, 0.2);
-    backdrop-filter: blur(10px);
-}
-
-a.disabled {
-    pointer-events: none;
-    cursor: not-allowed;
-    text-decoration: line-through;
+a[title]:hover::after {
+    content: "Right click and copy link to share";
+    font-size: var(--medium-text);
+    position: absolute;
+    top: 100%;
+    left: 0;
 }
